# swe-bench-m-delta-testing

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
dockerfiles/GoogleChrome__lighthouse-10176/: gold_patch.diff  gold_patch.pred
dockerfiles/GoogleChrome__lighthouse-10295/: gold_patch.diff  gold_patch.pred
dockerfiles/GoogleChrome__lighthouse-10505/: gold_patch.diff  gold_patch.pred
dockerfiles/GoogleChrome__lighthouse-11068/: gold_patch.diff  gold_patch.pred
dockerfiles/GoogleChrome__lighthouse-11489/: gold_patch.diff  gold_patch.pred
dockerfiles/GoogleChrome__lighthouse-11579/: gold_patch.diff  gold_patch.pred
dockerfiles/GoogleChrome__lighthouse-11738/: gold_patch.diff  gold_patch.pred
dockerfiles/GoogleChrome__lighthouse-12067/: gold_patch.diff  gold_patch.pred
dockerfiles/GoogleChrome__lighthouse-12970/: gold_patch.diff  gold_patch.pred
dockerfiles/GoogleChrome__lighthouse-13185/: gold_patch.diff  gold_patch.pred
dockerfiles/GoogleChrome__lighthouse-1446/: gold_patch.diff  gold_patch.pred
dockerfiles/GoogleChrome__lighthouse-14479/: gold_patch.diff  gold_patch.pred
dockerfiles/GoogleChrome__lighthouse-14515/: gold_patch.diff  gold_patch.pred
dockerfiles/GoogleChrome__lighthouse-14587/: gold_patch.diff  gold_patch.pred
dockerfiles/GoogleChrome__lighthouse-14672/: gold_patch.diff  gold_patch.pred
dockerfiles/GoogleChrome__lighthouse-14800/: gold_patch.diff  gold_patch.pred
results/: alibaba-fusion__next-94-before_patch-BASE.json
scripts/: clean.py  format_gold_diff_into_pred.py  get_gold_patches.py
(+996 files in other folders)
